SJRK-56-learningReflections: branch for learning reflections themed deployment.

--- a/ui/storyBrowse.html
+++ b/ui/storyBrowse.html
@@ -48,7 +48,6 @@
 <script src="/node_modules/sjrk-story-telling/src/js/storyTelling-ui-storyBrowser.js"></script>
 <script src="/node_modules/sjrk-story-telling/src/js/storyTelling-uploader.js"></script>
 <script src="/node_modules/sjrk-story-telling/src/js/transforms.js"></script>
-<script src="/node_modules/sjrk-story-telling/src/js/UIOMultilingualDemo.js"></script>
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.css">
 
@@ -108,7 +107,7 @@
 
 <script>
     $(document).ready(function () {
-        sjrk.storyTelling.server.loadThemedPage("browse", "karisma", function (theme) {
+        sjrk.storyTelling.server.loadThemedPage("browse", "learningReflections", function (theme) {
             sjrk.storyTelling.server.loadBrowse(theme);
         });
 
