SJRK-56-learningReflections: restore older UIO, since multilingual UIO is not in client-side SJRK-49.

--- a/ui/storyBrowse.html
+++ b/ui/storyBrowse.html
@@ -112,6 +112,18 @@
         });
 
     });
+
+    var uio = fluid.uiOptions.prefsEditor(".flc-prefsEditor-separatedPanel", {
+        terms: {
+            "templatePrefix": "/node_modules/infusion/src/framework/preferences/html",
+            "messagePrefix": "/node_modules/infusion/src/framework/preferences/messages"
+        },
+        "tocTemplate": "/node_modules/infusion/src/components/tableOfContents/html/TableOfContents.html",
+        "ignoreForToC": {
+            "overviewPanel": ".flc-overviewPanel"
+        }
+    });
+
 </script>
 
 </body>
