--- a/ui/storyView.html
+++ b/ui/storyView.html
@@ -111,6 +111,18 @@
             sjrk.storyTelling.server.loadStoryFromParameter(theme);
         });
     });
+
+    var uio = fluid.uiOptions.prefsEditor(".flc-prefsEditor-separatedPanel", {
+        terms: {
+            "templatePrefix": "/node_modules/infusion/src/framework/preferences/html",
+            "messagePrefix": "/node_modules/infusion/src/framework/preferences/messages"
+        },
+        "tocTemplate": "/node_modules/infusion/src/components/tableOfContents/html/TableOfContents.html",
+        "ignoreForToC": {
+            "overviewPanel": ".flc-overviewPanel"
+        }
+    });
+
 </script>
 
 </body>
